--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2819,7 +2819,7 @@
 				display: block;
 				height: 100%;
 				left: 0;
-				opacity: 0.85;
+				opacity: 0.7;
 				position: absolute;
 				width: 100%;
 				z-index: 2;
@@ -2858,7 +2858,7 @@
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #6fc3df;
+				background-color: #5995CB;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
